# Changelog

* v1.12 (TBD)

* v1.11 (January 21st 2022)
    - New Checks:
      - use-arrow-operator-instead-of-data
      - use-static-qregularexpression
      - unexpected-flag-enumerator-value
      - Removed inefficient-qlist check (Fixed in Qt6)

* v1.10 (July 20th 2021)
   - Requires C++17
   - Fixed a -Wclazy-lambda-in-connect false-positive
   - Fixed crash in copyable-polymorphic when PCH was enabled

* v1.9 (Jan 10th, 2021)
    - Fixed clazy slowdown introduced in 1.8. I can be up to 4x faster now.
    - range-loop was split in range-loop-detach and range-loop-reference
    - Fixed -Wclazy-connect-non-signal false positives


* v1.8 (November 22nd, 2020)
    - New Checks:
      - qt6-qhash-signature
      - qt6-header-fixes
      - qt6-deprecated-api-fixes
      - use-chrono-in-qtimer
      - fixit for missing-qobject-macro


* v1.7 (June 29th, 2020)
  - New Checks:
    - overloaded signal
    - invalid JNI signatures
    - qstring-comparison-to-implicit-char
    - qt6-qlatin1string-to-u
  - connect-non-signal: Fix case where it didn't find the pmf
  - qstring-arg warns when using QLatin1String::arg(int), as it casts to QChar
  - Building clazy itself is 30% faster
  - heap-allocated-small-trivial-type: less false-positives


* v1.6 (October 12, 2019)
  - New Checks:
    - heap-allocated-small-trivial-type
    - signal-with-return-value
    - qproperty-type-mismatch, contributed by Jean-Michaël Celerier
  - Removed level3. Moved all level3 checks to manual level. Doesn't make sense to enable all of them.
  Each one must be carefully considered.
  - Fixed regressions with LLVM 9.0
  - Minimum LLVM was bumped to 5.0
  - Fixit infrastructure was overhauled
  - Clazy no longer rewrites files directly, to avoid races when parallel invocations change the same header.
  - Clazy now exports a yaml file with the replacements, to be applied with clang-apply-replacements. 
  The same way other clang tooling does it.